<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_normal"
                android:text="@string/begin_date"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_my_calendar"/>
                <TextView
                    android:id="@+id/filter_begin_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Begin Date"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_normal"
                android:text="Sort Order:"/>

            <Spinner
                style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
                android:id="@+id/filter_sort_order"
                android:layout_marginTop="@dimen/padding_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/orders"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_normal"
                android:text="News Desk:"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/filter_check_art"
                android:text="@string/arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/filter_check_fashion"
                android:text="@string/fashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/filter_check_sports"
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/filter_apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"/>

                <Button
                    android:layout_marginLeft="@dimen/padding_16"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/filter_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>